tests/ui/generic-associated-types/own-bound-span.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/own-bound-span.rs:14:24
   |
LL |     let _: <S as D>::P<String>;
   |                        ^^^^^^ the trait `Copy` is not implemented for `String`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/ffi/os_str.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
note: required by a bound in `D::P`
  --> $DIR/own-bound-span.rs:4:15
   |
LL |     type P<T: Copy>;
   |               ^^^^ required by this bound in `D::P`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
